[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/ServerLobby.gd" type="Script" id=1]
[ext_resource path="res://resources/assets/fundo-pedras.png" type="Texture" id=2]
[ext_resource path="res://resources/Antonio-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://resources/assets/ok-cancela.png" type="Texture" id=4]
[ext_resource path="res://resources/Antonio-Bold.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 3 )

[node name="Node" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BG" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="fundo-pedras" type="Sprite" parent="BG"]
texture = ExtResource( 2 )
centered = false

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -174.5
margin_top = 13.0
margin_right = 174.5
margin_bottom = 79.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.94902, 0.901961, 1 )
text = "Partidas dispon√≠veis:"

[node name="ServerList" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 28.0
margin_top = 83.0
margin_right = -30.0
margin_bottom = -98.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="ServerList"]

[node name="Back" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -70.0
margin_top = -71.0
margin_right = 71.0
margin_bottom = 4.0
texture_normal = ExtResource( 4 )
expand = true

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -62.0
margin_top = -64.0
margin_right = 66.0
margin_bottom = -16.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.294118, 0.223529, 0.129412, 1 )
text = "Voltar"
align = 1
valign = 1

[node name="PopUp" type="Control" parent="."]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Fade" type="ColorRect" parent="PopUp"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.117647, 0.117647, 0.117647, 0.207843 )

[node name="ColorRect" type="ColorRect" parent="PopUp"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -209.0
margin_top = -92.0
margin_right = 209.0
margin_bottom = 92.0
color = Color( 0.921569, 0.921569, 0.921569, 1 )

[node name="Label" type="Label" parent="PopUp"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -178.0
margin_top = -83.0
margin_right = 178.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.152941, 0.152941, 0.152941, 1 )
text = "Ocorreu um erro ao tentar se conectar na partida"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="PopUpOk" type="Button" parent="PopUp"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = 32.0
margin_right = 70.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 4 )
text = "Voltar"
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="PopUp/PopUpOk" to="." method="_on_PopUpOk_pressed"]
